changed bg color of add btn

--- a/src/components/NewTodo/NewTodo.css
+++ b/src/components/NewTodo/NewTodo.css
@@ -15,7 +15,7 @@ input {
 }
 
 .addNew {
-  background-color: #ffbb00; /* Green */
+  background-color: #ff8800; /* Green */
   border: 2px solid black;
   border-radius: 4px;
   color: black;
